# gtk2_practice

./: .gitignore  CMakeLists.txt  README.md  TAGS
gtk2_simple/src/: gtk2_application_icon.c  gtk2_buttons.c  gtk2_centering.c  gtk2_simple.c
